# asv_env_uv

./: Cargo.toml  README.md  pyproject.toml
asv_env_uv/: __init__.py
python/asv_env_uv/: __init__.py
src/: lib.rs
tests/: test_backend.py  test_capabilities.py  test_create_smoke.py  test_pip_plus.py
