[package]
name = "asv_env_uv"
version = "0.4.0"
edition = "2021"
description = "ASV uv environment backend (Rust/maturin over uv crate)"
license = "BSD-3-Clause"
rust-version = "1.82"

[lib]
name = "asv_env_uv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
uv = { version = "0.11", default-features = false }

[profile.release]
lto = "thin"
