[package]
name = "asv_env_uv"
version = "0.4.2"
edition = "2021"
description = "ASV uv environment backend (maturin over uv-python + uv-virtualenv crates)"
license = "BSD-3-Clause"
rust-version = "1.82"

[lib]
name = "asv_env_uv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
# Real library crates from the uv monorepo (published to crates.io)
uv-python = "0.0.61"
uv-virtualenv = "0.0.61"
uv-cache = "0.0.61"

[profile.release]
lto = "thin"
