[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "asv_env_uv"
version = "0.4.1"
description = "ASV environment_type=uv via maturin + in-process uv-virtualenv crates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = ["asv>=0.6.5"]

[project.entry-points."asv.environment_backends"]
uv = "asv_env_uv:Uv"

[project.entry-points."asv.plugins"]
uv = "asv_env_uv:Uv"

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "asv_env_uv._native"
